# Socratic-nexus

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DETAILED_TEST_FIXES.md  ECOSYSTEM.md  FINAL_STRUCTURE.txt  GOOGLE_GENAI_MIGRATION.md  INDEX.md  LICENSE  QUICK_REFERENCE.txt  README.md  README_RESTRUCTURING.md  RESTRUCTURING_BACKUP.txt  RESTRUCTURING_COMPLETE.md  RESTRUCTURING_DOCS_INDEX.md  RESTRUCTURING_REPORT.md  SECURITY.md  SOCRATES_MIGRATION_PLAN.md  SUPPORT.md  TEST_COVERAGE_IMPROVEMENTS.md  TEST_FIXES_SUMMARY.md  TEST_STRATEGY_SUMMARY.md  mypy_fixes.sh  pyproject.toml
.github/workflows/: publish.yml  quality.yml  test.yml
docs/: API_REFERENCE.md  FAQ_BY_SCENARIO.md  GUIDES_BY_ROLE.md  INTEGRATION_GUIDE.md  TROUBLESHOOTING.md  architecture.md  integrations.md
examples/: 01_anthropic_basic.py  01_anthropic_claude.py  02_openai_gpt4.py  03_google_gemini.py  04_ollama_local.py  06_async_calls.py  07_token_tracking.py  08_error_handling.py  09_provider_fallback.py  10_openclaw_integration.py  11_langchain_integration.py  12_vision_models.py  13_function_calling.py  14_langchain_integration.py  15_langgraph_integration.py  16_openclaw_integration.py  README.md
src/socrates_nexus/: __init__.py  async_client.py  client.py  deduplication.py  documentation.py  exceptions.py  models.py  performance.py  retry.py  streaming.py  vision.py
src/socrates_nexus/clients/: __init__.py  google_client.py  ollama_client.py  openai_client.py
src/socrates_nexus/integrations/: __init__.py
src/socrates_nexus/integrations/langchain/: __init__.py  llm.py
src/socrates_nexus/integrations/openclaw/: __init__.py  skill.py
src/socrates_nexus/providers/: __init__.py  anthropic.py  base.py  google.py  ollama.py  openai.py
src/socrates_nexus/utils/: images.py
src/socratic_nexus/: __init__.py  claude_client.py  events.py  exceptions.py  insights.py  models.py
src/socratic_nexus/clients/: __init__.py  claude_client.py  google_client.py  ollama_client.py  openai_client.py
src/socratic_nexus/integrations/: __init__.py  langchain.py  langgraph.py  openclaw.py
tests/: conftest.py  test_all_clients_coverage.py  test_all_llm_clients.py  test_async_client.py  test_async_integration.py  test_async_methods.py  test_async_utility_methods.py  test_auth_comprehensive.py  test_auth_flow_comprehensive.py  test_cache.py  test_claude_async_coverage.py  test_claude_async_methods.py  test_claude_client.py  test_claude_client_comprehensive.py  test_claude_code_paths.py  test_claude_decryption_paths.py  test_claude_error_scenarios.py  test_claude_functional.py  test_claude_generation_integration.py  test_claude_method_execution.py  test_claude_specialized_methods.py  test_claude_uncovered_branches.py  test_claude_uncovered_coverage.py  test_client.py  test_client_api_methods.py  test_client_comprehensive.py  test_client_coverage.py  test_client_extended.py  test_client_initialization.py  test_client_integration.py  test_client_method_logic.py  test_client_methods.py  test_client_response_handling.py  test_clients_error_handling.py  test_clients_methods.py  test_comprehensive_coverage.py  test_coverage_gaps.py  test_coverage_integration.py  test_deduplication.py  test_documentation.py  (+39 more)
tests/test_providers/: test_anthropic_provider.py  test_base_provider.py  test_google_provider.py  test_ollama_provider.py  test_openai_provider.py
