[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socratic-nexus"
version = "0.3.6"
description = "Universal LLM client for production - works with Claude, GPT-4, Gemini, Llama, and any LLM. Built-in integrations with Openclaw, LangChain, and LangGraph."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Socrates Nexus Contributors"}
]
keywords = [
    "llm",
    "ai",
    "claude",
    "gpt-4",
    "gemini",
    "ollama",
    "llama",
    "production",
    "multi-llm",
    "universal-client",
    "retry",
    "streaming",
    "async",
    "token-tracking"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# Providers
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.0.0"]
google = ["google-generativeai>=0.3.0"]
ollama = ["ollama>=0.0.8"]
huggingface = ["huggingface-hub>=0.17.0"]

# Integrations
openclaw = []
langchain = ["langchain>=0.1.0"]

# All providers
all = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "ollama>=0.0.8",
    "huggingface-hub>=0.17.0",
    "cryptography>=41.0.0",
]

# All integrations
integrations = [
    "langchain>=0.1.0",
]

# Everything
full = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "ollama>=0.0.8",
    "huggingface-hub>=0.17.0",
    "langchain>=0.1.0",
]

async = ["asyncio>=3.4.3"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-requests>=2.31.0",
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/Nireus79/Socratic-nexus"
Documentation = "https://github.com/Nireus79/Socratic-nexus/tree/main/docs"
Repository = "https://github.com/Nireus79/Socratic-nexus"
"Source Code" = "https://github.com/Nireus79/Socratic-nexus"
"Bug Tracker" = "https://github.com/Nireus79/Socratic-nexus/issues"
Changelog = "https://github.com/Nireus79/Socratic-nexus/releases"

[tool.setuptools]
packages = [
    "socratic_nexus",
    "socratic_nexus.clients",
    "socratic_nexus.integrations",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
socratic_nexus = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--strict-markers --tb=short -v"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require API keys)",
    "slow: Tests that take >1 second",
    "requires_api: Tests requiring valid API keys",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
check_untyped_defs = false
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "socratic_nexus.integrations.*",
    "tests.*",
]
ignore_errors = true

[tool.coverage.run]
source = ["socratic_nexus"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/integrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
